<resources>
    <string name="app_name">My Application</string>
    <string name="label">pc mart</string>
    <string name="use">name</string>
    <string name="pass">password</string>
    <string name="btn">signin</string>
    <string name="enter">Enter the invoice:</string>
    <string name="type">type the invoice:</string>
    <string name="sale">purchases/sales</string>
    <string name="name1">Name of customer/agent</string>
    <string name="invoice">Description of an invoice.</string>
    <string name="details">Invoice Details.</string>
    <string name="mat">Material</string>
    <string name="number">number</string>
    <string name="price1">price</string>
    <string name="total1">total:</string>
    <string name="Save">Save the invoice</string>
    <string name="openDate">Open Calender</string>
    <string name="report">reports</string>
    <string name="type1">Type of report: </string>
    <string name="sit">Settings</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search2">Search</string>
    <string name="search1">Search top partner</string>
    <string name="is_buy">Is Buy</string>
    <string name="id">id</string>
    <string name="agent_id">Agent Id</string>
    <string name="is_buy_tv">Is Buy</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="material_id">Material id</string>
    <string name="number_tv">Number</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="total_order">Total Order</string>
    <string name="description_agent">Description</string>
    <string name="name_agent">Name</string>
    <string name="id_agent">id</string>
    <string name="search_best_seller">Search best seller</string>
    <string name="id_material">id</string>
    <string name="name_Material">Name</string>
    <string name="description_material">Description</string>
    <string name="amount">Amount</string>

</resources>