<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/et_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainpage1"
    tools:layout_editor_absoluteY="89dp">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:isScrollContainer="true"
        >

    <LinearLayout
        android:id="@+id/et_second"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/pppp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFF3F4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="serif"
            android:text="@string/enter"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_forth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFF3F4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="209dp"
            android:layout_height="31dp"
            android:layout_marginStart="10dp"
            android:text="@string/type"
            android:textAlignment="gravity"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/selectType"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_fifth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFF3F4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="209dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:text="@string/name1"
            android:textAlignment="textStart"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/selectAgent"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"  />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EFF3F4">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/invoice"
            android:textAlignment="textStart"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:layout_marginLeft="10dp" />

        <EditText
            android:id="@+id/description_of_invoice"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/invoice"
            android:inputType="text"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#EFF3F4">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/openDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#90C7F3"
            android:onClick="openCalender"
            android:text="@string/openDate"
            android:textColor="@color/ic_lap_background"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="250dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_seven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFF3F4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="serif"
            android:text="@string/details"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_sixth"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#D5E1E6"
        android:backgroundTint="#EFF3F4">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="10"
            android:text="@string/mat"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="2"
            android:text="@string/number"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/price1"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_sevenn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EFF3F4"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/materialSpinner"
                    android:layout_height="35dp"
                    android:layout_width="150dp"
                    android:visibility="invisible"
                    />

                <EditText
                    android:id="@+id/et_material"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mat"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:autofillHints=""
                    android:visibility="visible"
                    />

        </FrameLayout>

        <EditText
            android:id="@+id/et_number_of_invoice_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/price1"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_sixx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EFF3F4">

        <TextView
            android:id="@+id/textView66"
            android:layout_width="133dp"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/total1"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_total"
            android:layout_width="248dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/total1"
            android:ems="10"
            android:hint="@string/total1"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_isBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EFF3F4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/is_buy"
            android:layout_weight="20.0"
            />

        <Switch
            android:id="@+id/switch_is_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#90C7F3"
            android:onClick="onClickSaveOrder"
            android:text="@string/Save"
            android:textColor="@color/ic_lap_background"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="411dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#90C7F3"
            android:text="@string/sit"
            android:textColor="@color/ic_lap_background"
            tools:layout_editor_absoluteX="411dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#90C7F3"
            android:onClick="gogo"
            android:text="@string/report"
            android:textColor="@color/ic_lap_background"
            tools:layout_editor_absoluteX="411dp" />

    </LinearLayout>
</LinearLayout>
    </ScrollView>
</RelativeLayout>