<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Best_Seller">

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        tools:layout_editor_absoluteX="٠dp"
        tools:layout_editor_absoluteY="٢٨٧dp">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:scrollbars="horizontal|vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TableLayout
                    android:id="@+id/tl_BestSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    >
                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        tools:ignore="UselessParent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            android:text="@string/id_material" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            android:text="@string/name_Material" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            android:text="@string/description_material" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            android:text="@string/amount" />

                    </TableRow>
                </TableLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>