<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/et_Usename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="21dp"
        android:background="#C4DFF4"
        android:ems="10"
        android:hint="@string/use"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/et_Password"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:background="#C4DFF4"
        android:ems="10"
        android:hint="@string/pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_sign"
        app:layout_constraintStart_toStartOf="@+id/et_Usename"
        app:layout_constraintTop_toBottomOf="@+id/et_Usename" />

    <Button
        android:id="@+id/bt_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="97dp"
        android:backgroundTint="#90C7F3"
        android:onClick="sign"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/btn"
        android:textColor="@color/ic_lapt_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_Password"
        app:layout_constraintTop_toBottomOf="@+id/et_Password"
        tools:onClick="btn_next" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="64dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/et_Usename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pppp" />


</androidx.constraintlayout.widget.ConstraintLayout>